# test

./: README.md  db.sqlite3  pyproject.toml
Test/: settings.py  urls.py
main/: admin.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py
